[package]
name = "ruslin-data"
version = "0.1.0-alpha.1"
edition = "2021"
license = "GPL-3.0"
description = "A simple notes application that supports syncing notes using a self-hosted Joplin server."
homepage = "https://github.com/ruslin-note/ruslin-data"
repository = "https://github.com/ruslin-note/ruslin-data"
readme = "README.md"
exclude = [
    "tools/joplin-server/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
chrono = { version = "0.4.23", default-features = false }
diesel = { version = "=2.0.4", features = ["sqlite", "chrono", "r2d2", "uuid", "extras"] }
diesel_migrations = { version = "=2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "=0.26.0", features = ["bundled"] }
futures-util = "0.3.26"
jieba-rs = "0.6.7"
log = "0.4.17"
parking_lot = "0.12.1"
r2d2 = "0.8.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_repr = "0.1.10"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
uuid = { version = "1.3.0", features = ["std", "v7"] }

[target.'cfg(windows)'.dependencies]
# https://github.com/briansmith/ring/blob/main/BUILDING.md
reqwest = { version = "0.12", default-features = true, features = ["json", "stream"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[dev-dependencies]
env_logger = "0.11.3"
tempfile = "3.3.0"
toml = "0.8.12"

[patch.crates-io]
diesel = { git = 'https://github.com/DianQK/diesel.git', tag = "v2.0.4-p1" }
diesel_migrations = { git = 'https://github.com/DianQK/diesel.git', tag = "v2.0.4-p1" }
