[package]
name = "ruslin-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled", "time"] }
thiserror = "1.0.37"
time = "0.3.17"
uuid = { version = "1.2.1", features = ["std", "v7"] }
