[package]
name = "ruslin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
diesel = { version = "2.0", features = ["sqlite", "chrono", "r2d2", "uuid", "extras"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
log = "0.4.17"
r2d2 = "0.8.10"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_repr = "0.1.9"
thiserror = "1.0.37"
uuid = { version = "1.2.1", features = ["std", "v7"] }

[dev-dependencies]
tempfile = "3.3.0"
toml = "0.5.9"
